# Billio

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: config.rs  constants.rs  error.rs  lib.rs  main.rs  service.rs  visualization.rs
src/api/: handlers.rs  mod.rs  models.rs  openapi.rs
src/auth/: jwt.rs
src/cache/: cache_keys.rs  in_memory_cache.rs  mod.rs
src/config/: config.rs
src/core/: errors.rs  services.rs
src/core/models/: group.rs  settlement.rs  transaction.rs  transaction_split.rs  user.rs
src/infrastructure/: mod.rs
src/infrastructure/cache/: cache_keys.rs  in_memory.rs  mod.rs
src/infrastructure/logging/: in_memory.rs  mod.rs
src/infrastructure/storage/: in_memory.rs  mod.rs
src/logger/: in_memory.rs  mod.rs
src/models/: audit.rs  group.rs  group_user.rs  mod.rs  settlement.rs  transaction.rs  transaction_split.rs  user.rs
src/storage/: in_memory.rs  mod.rs
src/tests/: group_tests.rs  mod.rs  transaction_tests.rs  user_tests.rs
