[package]
name = "acme"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "acme"
path = "src/main.rs"

[dependencies]
chrono = "0.4.41"
uuid = { version = "1.17.0", features = ["v4","serde"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
serde_json = "1.0.140"

[dev-dependencies]
env_logger = "0.11"
