[package]
name = "billio"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "acme"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
serde_json = "1.0.141"
tokio = { version = "1.40", features = ["full"] }
thiserror = "2.0.12"
async-trait = "0.1"
axum = "0.8.4"
http = "1.1"
futures = "0.3.31"
tower-http = { version = "0.6.6", features = [
  "timeout",
  "trace",
  "compression-gzip",
  "cors",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.41"
dotenv = "0.15.0"
once_cell = "1.21.3"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1.40", features = ["full", "test-util"] }
